--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+#Para inicializar la base de datos con los scripts definidos en schema-anulado.sql. Sólo inicializar una vez.
+#spring.sql.init.mode=always
+
 #Esperar a que cargue hibernate antes de acceder a schema-anulado.sql
 spring.jpa.defer-datasource-initialization=true
 
